# jin-scan-simulation

./: .gitignore  README.md  requirements.txt  setup.cfg
readme/: readme_example.py
src/jin_scan_simulation/: datasets.py  polygons.py  raycasting.py
tests/: __init__.py  test_simulation.py
