[metadata]
name = jin-scan-simulation
version = 0.0.1
author = jinoru
author_email = someone@example.com
description = A package for generating simulated laser scans.
long_description = file: README.md
long_description_content_type = text/markdown
url = None
project_urls =
    Bug Tracker = None
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src